[project]
name = "cuelebre-vault-backend"
version = "0.1.0"
description = "Aplicación para la gestión financiera personal y presupuestaria, segura como un tesoro custodiado por el Cuelebre"
authors = [
    {name = "CodeRaido",email = "coderaido@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "toml (>=0.10.2,<0.11.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py313']
exclude = '''
/(
    \.venv
  | build
  | dist
  | migrations
  | alembic
  | __pycache__
  | .*\.pyi
)/
'''


